k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-center-dashboard
  namespace: media
  labels:
    app: media-center-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-center-dashboard
  template:
    metadata:
      labels:
        app: media-center-dashboard
    spec:
      containers:
        - name: dashboard
          image: ghcr.io/augustinbegue/media-center/dashboard:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
